specify build android for compilation

--- a/app.build.gradle
+++ b/app.build.gradle
@@ -34,8 +34,8 @@ android {
             else if (PROP_BUILD_TYPE == 'cmake') {
                 cmake {
                     targets 'MyGame'
-                    arguments "-DCMAKE_FIND_ROOT_PATH=", "-DANDROID_STL=c++_static", "-DANDROID_TOOLCHAIN=clang",
-                            "-DANDROID_ARM_NEON=TRUE"
+                    arguments "-DCMAKE_FIND_ROOT_PATH=", "-DCC_TARGET_PLATFORM=CC_PLATFORM_ANDROID", "-DANDROID_STL=c++_static",
+                              "-DANDROID_TOOLCHAIN=clang", "-DANDROID_ARM_NEON=TRUE"
                     cppFlags "-frtti -fexceptions -fsigned-char"
                 }
             }
